Update game script source to game-v2.js

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="options"></div>
 
     <!-- Load Game Script -->
-    <script type="module" src="game.js"></script>
+    <script type="module" src="game-v2.js"></script>
 
 </body>
 </html>
