--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <div id="leaderboardPanel">
         <h2>Leaderboard</h2>
 
-        <!-- Dropdown -->
         <select id="lbSelect">
             <option value="wins">Wins</option>
             <option value="fastest">Fastest Time</option>
@@ -37,17 +36,14 @@
             <option value="hard">Hard Mode</option>
         </select>
 
-        <!-- Submit button -->
         <button id="submitScoreBtn">Submit Current Stats</button>
 
-        <!-- Leaderboard list -->
         <div id="leaderboardContent">
             <div class="lb-box">
                 <ul id="lbList"></ul>
             </div>
         </div>
 
-        <!-- Username -->
         <div id="lbUsername"></div>
     </div>
 
@@ -57,16 +53,16 @@
 
         <select id="bgSelect">
             <option disabled>Select Background</option>
-            <option value="Classic.mp4">Classic</option>
-            <option value="Godhome.mp4">Godhome</option>
-            <option value="Hidden Dreams.mp4">Hidden Dreams</option>
-            <option value="Infected.mp4">Infected</option>
-            <option value="Lifeblood.mp4">Lifeblood</option>
-            <option value="SteelSoul.mp4">SteelSoul</option>
-            <option value="The Grimm Troupe.mp4">The Grimm Troupe</option>
-            <option value="Void.mp4">Void</option>
-            <option value="Voidheart.mp4">Voidheart</option>
-            <option value="Zote.mp4" id="zoteOption" disabled>Zote</option>
+            <option value="backgrounds/Classic.mp4">Classic</option>
+            <option value="backgrounds/Godhome.mp4">Godhome</option>
+            <option value="backgrounds/Hidden Dreams.mp4">Hidden Dreams</option>
+            <option value="backgrounds/Infected.mp4">Infected</option>
+            <option value="backgrounds/Lifeblood.mp4">Lifeblood</option>
+            <option value="backgrounds/SteelSoul.mp4">SteelSoul</option>
+            <option value="backgrounds/The Grimm Troupe.mp4">The Grimm Troupe</option>
+            <option value="backgrounds/Void.mp4">Void</option>
+            <option value="backgrounds/Voidheart.mp4">Voidheart</option>
+            <option value="backgrounds/Zote.mp4" id="zoteOption" disabled>Zote</option>
         </select>
 
         <label>Background Volume</label>
@@ -88,15 +84,12 @@
     <button id="leaderboardBtn">Leaderboard</button>
     <button id="menuBtn">Menu</button>
 
-    <!-- Title -->
     <h1>Hollow Knight Sound Guessing</h1>
 
     <div class="divider"></div>
 
-    <!-- Play Sound -->
     <button id="playBtn">Play Sound</button>
 
-    <!-- Choices -->
     <div class="choiceContainer">
         <select id="choices"></select>
 
@@ -106,20 +99,16 @@
         </div>
     </div>
 
-    <!-- Submit Guess -->
     <button id="submitBtn">Submit Guess</button>
 
     <p id="result"></p>
 
-    <!-- GitHub -->
     <div id="githubLink">
         <a href="https://github.com/memeem27/HK-Sound-Game" target="_blank">GitHub</a>
     </div>
 
-    <!-- Trophy Case -->
     <div id="trophyCase"></div>
 
-    <!-- Score Modal -->
     <div id="scoreModal">
         <div id="scoreContent">
             <h2 id="scoreTitle">Time’s Up!</h2>
