used curser to fix some stuffs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- Stats (centered at top) -->
     <div id="statsBox">
         Wins: <span id="wins">0</span> |
+        Losses: <span id="losses">0</span> |
+        W/L: <span id="winLossRatio">0</span> |
         Streak: <span id="streak">0</span> |
         Best: <span id="bestStreak">0</span> |
         Fastest: <span id="fastestTime">0</span>
