--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <h2>Background</h2>
 
         <select id="bgSelect">
-            <option value="" disabled selected>Select Background</option>
-            <option value="backgrounds/Classic.mp4">Classic</option>
+            <option value="backgrounds/Classic.mp4" selected>Classic</option>
             <option value="backgrounds/Godhome.mp4">Godhome</option>
             <option value="backgrounds/Hidden Dreams.mp4">Hidden Dreams</option>
             <option value="backgrounds/Infected.mp4">Infected</option>
@@ -111,7 +110,7 @@
 
     <div id="scoreModal">
         <div id="scoreContent">
-            <h2 id="scoreTitle">Time’s Up!</h2>
+            <h2 id="scoreTitle">Time's Up!</h2>
             <p id="scoreText"></p>
             <button id="playAgainBtn">Play Again</button>
         </div>
