--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="appcheck.js"></script>
     <script type="module" src="firebase.js"></script>
     <script type="module" src="leaderboard.js"></script>
     <script src="game.js"></script>
