some more updates

--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
 
         <h2>Timer Mode</h2>
         <label><input type="radio" name="timerMode" value="off" checked> Off</label>
-        <label><input type="radio" name="timerMode" value="easy"> Easy (45s)</label>
-        <label><input type="radio" name="timerMode" value="medium"> Medium (30s)</label>
-        <label><input type="radio" name="timerMode" value="hard"> Hard (15s)</label>
+        <label><input type="radio" name="timerMode" value="on"> On</label>
+
+        <div id="timerDifficulty" style="display: none; margin-top: 10px;">
+            <label><input type="radio" name="timerDifficulty" value="easy" checked> Easy (45s)</label>
+            <label><input type="radio" name="timerDifficulty" value="medium"> Medium (30s)</label>
+            <label><input type="radio" name="timerDifficulty" value="hard"> Hard (15s)</label>
+        </div>
     </div>
 
     <!-- Buttons -->
