Some more small cahnges

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" 
+          content="default-src 'self'; 
+                   script-src 'self' https://www.gstatic.com https://www.google.com; 
+                   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
+                   font-src https://fonts.gstatic.com; 
+                   connect-src 'self' https://*.firebaseio.com https://*.googleapis.com https://firestore.googleapis.com; 
+                   media-src 'self'; 
+                   img-src 'self' data:;">
     <title>HK Sound Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -64,7 +72,7 @@
             <option value="backgrounds/Zote.mp4" id="zoteOption" disabled>Zote</option>
         </select>
 
-        <label>Background Volume</label>
+        <label>Background Volume <span id="volumePercent">(35%)</span></label>
         <input type="range" id="volumeSlider" min="0" max="100" value="35">
 
         <label>Number of Options</label>
